--- a/infra/k8s/auth-deploy.yaml
+++ b/infra/k8s/auth-deploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-Deployment
+  name: auth-deployment
 spec:
   replicas: 1
   selector:
