--- a/auth/package.json
+++ b/auth/package.json
@@ -21,8 +21,14 @@
   "devDependencies": {
     "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
+    "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
+    "mongodb-memory-server": "^6.9.2",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.3",
     "ts-node-dev": "^1.0.0"
   }
 }
