--- a/infra/k8s/auth-mongo-deploy.yaml
+++ b/infra/k8s/auth-mongo-deploy.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-mongo-deployment
+  name: auth-mongo-deploy
 spec:
   replicas: 1
   selector: 
