--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bhuone/common",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "testing common package",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bhuone-garbu/ms-ticketing.git",
-    "directory": "common"
+    "directory": "common/."
   },
   "scripts": {
     "clean": "del ./build/*",
