--- a/common/package.json
+++ b/common/package.json
@@ -10,7 +10,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/bhuone-garbu/ms-ticketing.git",
-    "directory": "common/."
+    "directory": "common"
   },
   "scripts": {
     "clean": "del ./build/*",
@@ -22,5 +22,14 @@
   "devDependencies": {
     "del-cli": "^3.0.1",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "@types/cookie-session": "^2.0.41",
+    "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
+    "cookie-session": "^1.4.0",
+    "express": "^4.17.1",
+    "express-validator": "^6.6.1",
+    "jsonwebtoken": "^8.5.1"
   }
 }
