--- a/infra/k8s/tickets-deploy.yaml
+++ b/infra/k8s/tickets-deploy.yaml
@@ -1,23 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: auth-deploy
+  name: tickets-deploy
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: auth
+      app: tickets
   template:
     metadata:
       labels:
-        app: auth
+        app: tickets
     spec:
       containers:
-        - name: auth
-          image: bhuone/auth
+        - name: tickets
+          image: bhuone/tickets
           env:
             - name: MONGO_URI
-              value: 'mongodb://auth-mongo-serv:27017/auth'
+              value: mongodb://tickets-mongo-serv:27017/tickets
             - name: JWT_KEY
               valueFrom:
                 secretKeyRef:
@@ -27,12 +27,12 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: auth-serv
+  name: tickets-serv
 spec:
   selector:
-    app: auth
+    app: tickets
   ports:
-    - name: auth
+    - name: tickets
       protocol: TCP
       port: 4000
       targetPort: 4000
