adding tickets backend to the ingress service configuration

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -14,6 +14,10 @@ spec:
             backend:
               serviceName: auth-serv
               servicePort: 4000
+          - path: /api/tickets/?(.*)
+            backend:
+              serviceName: tickets-serv
+              servicePort: 4000
           - path: /?(.*)
             backend:
               serviceName: client-serv
