--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bhuone/common",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "testing common package",
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
@@ -14,7 +14,8 @@
   },
   "scripts": {
     "clean": "del ./build/*",
-    "build": "npm run clean && tsc"
+    "build": "npm run clean && tsc",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [],
   "author": "bhuone",
@@ -30,6 +31,7 @@
     "cookie-session": "^1.4.0",
     "express": "^4.17.1",
     "express-validator": "^6.6.1",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "node-nats-streaming": "^0.3.2"
   }
 }
