--- a/tickets/package.json
+++ b/tickets/package.json
@@ -18,7 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@bhuone/common": "^1.0.5",
+    "@bhuone/common": "^1.0.6",
     "@types/cookie-session": "^2.0.41",
     "@types/express": "^4.17.8",
     "@types/jsonwebtoken": "^8.5.0",
@@ -29,6 +29,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
+    "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   },
