skaffolding the new orders micro service

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -18,6 +18,10 @@ spec:
             backend:
               serviceName: tickets-serv
               servicePort: 4000
+          - path: /api/orders/?(.*)
+            backend:
+              serviceName: orders-serv
+              servicePort: 4000
           - path: /?(.*)
             backend:
               serviceName: client-serv
