--- a/tickets/package.json
+++ b/tickets/package.json
@@ -29,6 +29,7 @@
     "express-validator": "^6.6.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
+    "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
