--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -40,6 +40,14 @@ build:
         manual:
           - src: 'src/**/*.ts'
             dest: .
+    - image: bhuone/payments
+      context: payments
+      docker:
+        dockerfile: dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts'
+            dest: .
     - image: bhuone/client
       context: client
       docker:
