fixing typo on Skaffold.yaml and new ingress rule

--- a/infra/k8s/ingress-srv.yaml
+++ b/infra/k8s/ingress-srv.yaml
@@ -22,6 +22,10 @@ spec:
             backend:
               serviceName: orders-serv
               servicePort: 4000
+          - path: /api/payments/?(.*)
+            backend:
+              serviceName: payments-serv
+              servicePort: 4000
           - path: /?(.*)
             backend:
               serviceName: client-serv
