--- a/payments/package.json
+++ b/payments/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.10.11",
     "mongoose-update-if-current": "^1.4.0",
     "node-nats-streaming": "^0.3.2",
+    "stripe": "^8.121.0",
     "ts-node-dev": "^1.0.0",
     "typescript": "^4.0.5"
   },
