--- a/.github/workflows/deploy-auth.yaml
+++ b/.github/workflows/deploy-auth.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build:
-    runs-on: ububtu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: action/checkout@v2
       - run: cd auth && docker build -t bhuone/auth .
